feat: React STT Custom Hooks

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
             "@components/*": ["src/components/*"], // 경로 별칭 설정
             "@pages/*": ["src/pages/*"],
             "@styles/*": ["src/styles/*"],
-            "@/assets/*": ["./src/assets/*"]
+            "@/assets/*": ["./src/assets/*"],
+            "@/hooks/*": ["./src/hooks/*"],
         },
 
         /* Linting */
