--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
+    "react-speech-recognition": "^3.10.0",
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
+    "regenerator-runtime": "^0.14.1",
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
     "@types/node": "^22.4.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-speech-recognition": "^3.9.5",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^4.0.0",
