--- a/.github/workflows/dev_cicd.yml
+++ b/.github/workflows/dev_cicd.yml
@@ -9,81 +9,36 @@ on:
       - closed
 
 jobs:
-  CI:
-    runs-on: ubuntu-20.04
+  build:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [18.x]
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      # Cache Gradle
-      - name: Cache Gradle
-        uses: actions/cache@v3
+      - uses: actions/checkout@v1
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
         with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-
-      ### runner application java 설정
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-
-      ### gradlew 실행 권한 부여
-      - name: Grant execute Permission for gradlew
+          node-version: ${{ matrix.node-version }}
+      - name: Create env file
         run: |
-          chmod +x gradlew
-
-      ### project build
-      - name: Build with Gradle
+          touch .env
+          echo REACT_APP_API_ENDPOINT=${{ secrets.AWS_S3_ENDPOINT }} >> .env
+          cat .env
+      - name: npm Install
         run: |
-          ./gradlew clean build -x test
-
-      ### Docker Image Build and Push
-      - name: Login to Docker Hub
-        if: github.event.pull_request.merged == true
-        uses: docker/login-action@v2
+          npm install
+      - name: npm Build
+        run: |
+          npm run build
+      - name: Deploy to S3
+        uses: jakejarvis/s3-sync-action@master
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Set up Docker Buildx
-        if: github.event.pull_request.merged == true
-        uses: docker/setup-buildx-action@v2
-
-      - name: Build and push
-        if: github.event.pull_request.merged == true
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPONAME }}
-
-  # closed에 대한 server deploy
-  CD:
-    if: github.event.pull_request.merged == true
-    needs: [CI]
-
-    runs-on: ubuntu-20.04
-
-    steps:
-      ### SSH Connect and Docker Image Pull and Container Run
-      - name: Docker Image Pull and Container Run
-        uses: appleboy/ssh-action@v1.0.0
-        with:
-          host: ${{ secrets.DEV_SSH_HOST }}
-          username: ${{ secrets.DEV_SSH_USERNAME }}
-          password: ${{ secrets.DEV_SSH_PASSWORD }}
-          key: ${{ secrets.DEV_SSH_KEY }}
-          port: ${{ secrets.DEV_SSH_PORT }}
-          script: |
-            docker stop was
-            docker rm was
-            docker image rm ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPONAME }}
-            docker run -d -p 8080:8080 --name was ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPONAME }}
+          args: --acl public-read --delete
+        env:
+          AWS_S3_BUCKET: ${{ secrets.AWS_STAGING_BUCKET_NAME }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+          SOURCE_DIR: "dist"
