--- a/.github/workflows/dev_cicd.yml
+++ b/.github/workflows/dev_cicd.yml
@@ -2,7 +2,7 @@ name: Web Application Develop Server CI/CD
 
 on:
   pull_request:
-    branches: [ "develop" ]
+    branches: [ "dev" ]
     types:
       - opened
       - synchronize
