--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
         "allowImportingTsExtensions": true,
         "resolveJsonModule": true,
         "isolatedModules": true,
+        "noEmitOnError": false,
         "noEmit": true,
         "jsx": "react-jsx",
 
