--- a/.github/workflows/dev_cicd.yml
+++ b/.github/workflows/dev_cicd.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Create env file
         run: |
           touch .env
-          echo REACT_APP_API_ENDPOINT=${{ secrets.AWS_S3_ENDPOINT }} >> .env
+          echo VITE_APP_SERVER_PORT=${{ secrets.AWS_S3_ENDPOINT }} >> .env
           cat .env
       - name: npm Install
         run: |
